hopefully fixing scrollbar here

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,6 +1,6 @@
 main {
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
 
     display: flex;
     flex-flow: row wrap;
