--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,9 @@ body {
     color: whitesmoke;
     padding: 0;
     margin: 0;
+
+    height: 100%;
+    width: 100%;
 }
 
 p {
